--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,16 @@
   font-family: Arial, sans-serif;
 }
 
-.container {
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(to bottom, #ff00ff, #ff66cc);
+}
+.profile-picture {
   display: flex;
   justify-content: center;
-  background: linear-gradient(to bottom, #ff00ff, #ff66cc);
-  background: linear-gradient(135deg, #ff0099, #);
-  border-radius: 20px;
-  width: 360px;
-  height: 740px;
-  max-width: 100%;
-  padding: 20px;
-  text-align: center;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  flex-direction: column;
-  align-items: center;
 }
 
 .profile img {
@@ -39,6 +35,8 @@
 .profile p {
   color: white;
   margin-bottom: 15px;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 .toggle input[type="checkbox"] {
